src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductUpsertId__c</fullName>
        <externalId>true</externalId>
        <label>ProductUpsertId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <picklist>
            <picklistValues>
                <fullName>Ea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Components</fullName>
        <active>true</active>
        <description>List of all Components</description>
        <label>Components</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finished_Goods</fullName>
        <active>true</active>
        <description>List of all FG</description>
        <label>Finished Goods</label>
    </recordTypes>
</CustomObject>